# docs/swagger.yaml
@@ -167,7 +167,7 @@ definitions:
         - $ref: '#/definitions/resp.ResCode'
         description: 自定义的status
     type: object
-host: 39.105.136.3:8888
+host: 45.95.212.18:43223
 info:
   contact:
     email: server-lion@qq.com
@@ -181,7 +181,27 @@ info:
   title: 后端系统 API在线测试文档
   version: "1.0"
 paths:
-  /hall:
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: 登录接口
+      parameters:
+      - description: 请求参数
+        in: body
+        name: object
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserLoginReq'
+      responses:
+        "200":
+          description: 登录响应信息
+          schema:
+            $ref: '#/definitions/resp.ResponseData'
+      summary: 登录接口
+      tags:
+      - 全局接口
+  /manage/hall:
     delete:
       consumes:
       - application/json
@@ -280,7 +300,7 @@ paths:
       summary: 更新演出厅
       tags:
       - 演出厅管理
-  /hall/{hall_id}:
+  /manage/hall/{hall_id}:
     get:
       consumes:
       - application/json
@@ -307,27 +327,7 @@ paths:
       summary: 查询所有演出厅
       tags:
       - 演出厅管理
-  /login:
-    post:
-      consumes:
-      - application/json
-      description: 登录接口
-      parameters:
-      - description: 请求参数
-        in: body
-        name: object
-        required: true
-        schema:
-          $ref: '#/definitions/dto.UserLoginReq'
-      responses:
-        "200":
-          description: 登录响应信息
-          schema:
-            $ref: '#/definitions/resp.ResponseData'
-      summary: 登录接口
-      tags:
-      - 全局接口
-  /play:
+  /manage/play:
     get:
       consumes:
       - application/json
@@ -400,7 +400,7 @@ paths:
       summary: 更新剧目
       tags:
       - 剧目管理
-  /play/{play_id}:
+  /manage/play/{play_id}:
     delete:
       consumes:
       - application/json
